LOCALIZATION: Added all keys and added PT - FR - ES

--- a/Angel/en.lproj/Localizable.strings
+++ b/Angel/en.lproj/Localizable.strings
@@ -45,6 +45,8 @@
 "Featured" = "Featured";
 "Of-The-Day" = "Of The Day";
 "All-Meditations" = "All Meditations";
+"Today-Title-Meditation %@" = "Today %@";
+"And-Spaces" = " and ";
 "See-All" = "See all";
 "Choose-Meditation-Soundtrack" = "Choose meditation soundtrack:";
 "Choose-Meditation-Minutes" = "Choose meditation minutes:";
@@ -141,6 +143,149 @@
 "Serenity" = "Serenity";
 "Fear" = "Fear";
 "Patience" = "Patience";
+
+"Peace-Long-Name" = "Inner Peace and Calm";
+"Hope-Long-Name" = "Hope and Optimism";
+"Blessing-Long-Name" = "Blessing and Attraction";
+"Forgiveness-Long-Name" = "Forgiveness and Compassion";
+"Abundance-Long-Name" = "Prosperity and Abundance";
+"Courage-Long-Name" = "Strength and Courage";
+"Joy-Long-Name" = "Joy and Happiness";
+"Protection-Long-Name" = "Protection and Safety";
+"Transformation-Long-Name" = "Transformation and Change";
+"Self-Care-Long-Name" = "Self-Care and Health";
+"Relationships-Long-Name" = "Love and Relationships";
+"Success-Long-Name" = "Success and Growth";
+"Confidence-Long-Name" = "Confidence and Self-Esteem";
+"Gratitude-Long-Name" = "Gratitude and Motivation";
+"Healing-Long-Name" = "Healing and Recovery";
+"Kindness-Long-Name" = "Kindness and Generosity";
+"Faith-Long-Name" = "Faith and Spirituality";
+"Serenity-Long-Name" = "Serenity and Tranquility";
+"Fear-Long-Name" = "Overcoming Fear and Anxiety";
+"Patience-Long-Name" = "Patience and Perseverance";
+
+"Peace-Headline-1" = "Find Inner Peace and Tranquility Today";
+"Peace-Headline-2" = "Relax Your Mind and Find Peace Within";
+"Peace-Headline-3" = "Discover Calmness and Serenity in Your Life";
+"Hope-Headline-1" = "Bring Hope and Optimism to Your Life";
+"Hope-Headline-2" = "Find Hope in the Darkest of Times";
+"Hope-Headline-3" = "Believe in a Brighter Future with Hope";
+"Blessing-Headline-1" = "Attract Blessings and Abundance into Your Life";
+"Blessing-Headline-2" = "Blessings Overflowing: Open Your Heart to Receive";
+"Blessing-Headline-3" = "Count Your Blessings and Live a Grateful Life";
+"Forgiveness-Headline-1" = "Let Go of Resentment and Embrace Forgiveness";
+"Forgiveness-Headline-2" = "Forgive Yourself and Others to Find Inner Peace";
+"Forgiveness-Headline-3" = "Cultivate Compassion and Forgiveness in Your Heart";
+"Abundance-Headline-1" = "Unlock the Secrets to Prosperity and Abundance";
+"Abundance-Headline-2" = "Abundance Is Your Birthright: Claim It Today";
+"Abundance-Headline-3" = "Attract Wealth and Abundance into Your Life";
+"Courage-Headline-1" = "Embrace Your Inner Strength and Courage";
+"Courage-Headline-2" = "Overcome Fear and Find Courage to Succeed";
+"Courage-Headline-3" = "Take Bold Actions and Live a Courageous Life";
+"Joy-Headline-1" = "Find Joy in the Little Things in Life";
+"Joy-Headline-2" = "Fill Your Life with Joy and Happiness";
+"Joy-Headline-3" = "Let Joy Be Your Guide to a Fulfilling Life";
+"Protection-Headline-1" = "Keep Yourself Safe with Powerful Protection";
+"Protection-Headline-2" = "Protection Against Negativity and Harm";
+"Protection-Headline-3" = "Feel Secure and Protected Every Day";
+"Transformation-Headline-1" = "Transform Your Life and Embrace Change";
+"Transformation-Headline-2" = "Unlock Your Potential and Achieve Your Dreams";
+"Transformation-Headline-3" = "Embrace the Power of Change for a Better Life";
+"Self-Care-Headline-1" = "Prioritize Self-Care for a Healthier You";
+"Self-Care-Headline-2" = "Nurture Your Mind, Body, and Soul with Self-Care";
+"Self-Care-Headline-3" = "Recharge Your Batteries with Self-Care";
+"Relationships-Headline-1" = "Love and Be Loved: Strengthen Your Relationships";
+"Relationships-Headline-2" = "Nurture Your Relationships and Watch Them Flourish";
+"Relationships-Headline-3" = "Build Strong and Healthy Relationships Every Day";
+"Success-Headline-1" = "Unlock Your Full Potential and Achieve Success";
+"Success-Headline-2" = "Rise Above Challenges and Achieve Greatness";
+"Success-Headline-3" = "Take Action and Create Your Own Success Story";
+"Confidence-Headline-1" = "Boost Your Confidence and Self-Esteem Today";
+"Confidence-Headline-2" = "Believe in Yourself and Your Abilities";
+"Confidence-Headline-3" = "Embrace Confidence and Live a Bold Life";
+"Gratitude-Headline-1" = "Cultivate Gratitude and Find Joy in Life";
+"Gratitude-Headline-2" = "Give Thanks for Life's Blessings Every Day";
+"Gratitude-Headline-3" = "A Grateful Heart Leads to a Happy Life";
+"Healing-Headline-1" = "Heal Your Body, Mind, and Soul Today";
+"Healing-Headline-2" = "Embrace Healing and Find Inner Peace";
+"Healing-Headline-3" = "Let Go of Pain and Embrace a Life of Healing";
+"Kindness-Headline-1" = "Spread Kindness and Make the World a Better Place";
+"Kindness-Headline-2" = "Kindness Matters: Practice It Every Day";
+"Kindness-Headline-3" = "Show Compassion and Kindness to Everyone You Meet";
+"Faith-Headline-1" = "Strengthen Your Faith and Find Inner Peace";
+"Faith-Headline-2" = "Trust in a Higher Power and Believe in Miracles";
+"Faith-Headline-3" = "Embrace Faith and Live a Purposeful Life";
+"Serenity-Headline-1" = "Find Serenity and Tranquility in Your Life";
+"Serenity-Headline-2" = "Discover Peace of Mind with Serenity";
+"Serenity-Headline-3" = "Cultivate Serenity and Live a Balanced Life";
+"Fear-Headline-1" = "Overcome Fear and Live a Life of Freedom";
+"Fear-Headline-2" = "Courage Over Fear: Face Your Fears Today";
+"Fear-Headline-3" = "Don't Let Fear Control Your Life: Overcome It Now";
+"Patience-Headline-1" = "Cultivate Patience and Achieve Your Goals";
+"Patience-Headline-2" = "Patience Is a Virtue: Practice It Every Day";
+"Patience-Headline-3" = "Endurance and Resilience: Cultivate Patience and Perseverance";
+
+"Peace-Headline-Short-1" = "find inner peace";
+"Peace-Headline-Short-2" = "relax your mind";
+"Peace-Headline-Short-3" = "cultivate a peaceful state of mind";
+"Hope-Headline-Short-1" = "discover hope";
+"Hope-Headline-Short-2" = "stay optimistic";
+"Hope-Headline-Short-3" = "believe in a brighter tomorrow";
+"Blessing-Headline-Short-1" = "attract blessings into your life";
+"Blessing-Headline-Short-2" = "count your blessings";
+"Blessing-Headline-Short-3" = "feel blessed";
+"Forgiveness-Headline-Short-1" = "let go of grudges";
+"Forgiveness-Headline-Short-2" = "practice compassion";
+"Forgiveness-Headline-Short-3" = "free yourself from resentment";
+"Abundance-Headline-Short-1" = "manifest abundance";
+"Abundance-Headline-Short-2" = "create wealth";
+"Abundance-Headline-Short-3" = "attract abundance into your life";
+"Courage-Headline-Short-1" = "take courage";
+"Courage-Headline-Short-2" = "find strength in difficult times";
+"Courage-Headline-Short-3" = "develop courage";
+"Joy-Headline-Short-1" = "experience joy every day";
+"Joy-Headline-Short-2" = "find the joy in simple moments";
+"Joy-Headline-Short-3" = "cultivate a joyful mindset";
+"Protection-Headline-Short-1" = "feel safe at all times";
+"Protection-Headline-Short-2" = "surround yourself with positive energy";
+"Protection-Headline-Short-3" = "protect yourself";
+"Transformation-Headline-Short-1" = "embrace change";
+"Transformation-Headline-Short-2" = "unlock your full potential";
+"Transformation-Headline-Short-3" = "become the best version of yourself";
+"Self-Care-Headline-Short-1" = "take care of you";
+"Self-Care-Headline-Short-2" = "prioritize yourself";
+"Self-Care-Headline-Short-3" = "nurture yourself";
+"Relationships-Headline-Short-1" = "strengthen your relationships";
+"Relationships-Headline-Short-2" = "build meaningful connections";
+"Relationships-Headline-Short-3" = "connect deeply";
+"Success-Headline-Short-1" = "achieve your goals";
+"Success-Headline-Short-2" = "unlock your full potential";
+"Success-Headline-Short-3" = "create the life you want";
+"Confidence-Headline-Short-1" = "build confidence";
+"Confidence-Headline-Short-2" = "believe in yourself";
+"Confidence-Headline-Short-3" = "overcome self-doubt";
+"Gratitude-Headline-Short-1" = "cultivate gratitude for a happier life";
+"Gratitude-Headline-Short-2" = "count your blessings every day";
+"Gratitude-Headline-Short-3" = "let gratitude change you";
+"Healing-Headline-Short-1" = "heal yourself with positive thoughts";
+"Healing-Headline-Short-2" = "let go of pain";
+"Healing-Headline-Short-3" = "feel better with the right mindset";
+"Kindness-Headline-Short-1" = "be kind to yourself and others";
+"Kindness-Headline-Short-2" = "spread kindness wherever you go";
+"Kindness-Headline-Short-3" = "be contagious with kindness";
+"Faith-Headline-Short-1" = "believe in miracles";
+"Faith-Headline-Short-2" = "trust the journey";
+"Faith-Headline-Short-3" = "let faith guide you in all things";
+"Serenity-Headline-Short-1" = "find serenity within";
+"Serenity-Headline-Short-2" = "embrace the serenity of the present moment";
+"Serenity-Headline-Short-3" = "let serenity flow in you";
+"Fear-Headline-Short-1" = "overcome fear";
+"Fear-Headline-Short-2" = "fear less, live more";
+"Fear-Headline-Short-3" = "face your fears";
+"Patience-Headline-Short-1" = "cultivate patience";
+"Patience-Headline-Short-2" = "wait for the good things";
+"Patience-Headline-Short-3" = "practice patience for a more peaceful life";
 
 "Same" = "Same";
 "Better" = "Better";
