--- a/Angel/it.lproj/Localizable.strings
+++ b/Angel/it.lproj/Localizable.strings
@@ -45,6 +45,8 @@
 "Featured" = "In primo piano";
 "Of-The-Day" = "Meditazione del giorno";
 "All-Meditations" = "Tutte le meditazioni";
+"Today-Title-Meditation %@" = "Oggi %@";
+"And-Spaces" = " e ";
 "See-All" = "Vedi tutto";
 "Choose-Meditation-Soundtrack" = "Scegli la colonna sonora della meditazione:";
 "Choose-Meditation-Minutes" = "Scegli i minuti di meditazione:";
@@ -141,6 +143,149 @@
 "Serenity" = "Serenità";
 "Fear" = "Paura";
 "Patience" = "Pazienza";
+
+"Peace-Long-Name" = "Pace interiore e calma";
+"Hope-Long-Name" = "Speranza e ottimismo";
+"Blessing-Long-Name" = "Benedizione e attrazione";
+"Forgiveness-Long-Name" = "Perdono e compassione";
+"Abundance-Long-Name" = "Prosperità e Abbondanza";
+"Courage-Long-Name" = "Forza e coraggio";
+"Joy-Long-Name" = "Gioia e felicità";
+"Protection-Long-Name" = "Protezione e sicurezza";
+"Transformation-Long-Name" = "Trasformazione e cambiamento";
+"Self-Care-Long-Name" = "Cura personale e salute";
+"Relationships-Long-Name" = "Amore e relazioni";
+"Success-Long-Name" = "Successo e crescita";
+"Confidence-Long-Name" = "Fiducia e autostima";
+"Gratitude-Long-Name" = "Gratitudine e motivazione";
+"Healing-Long-Name" = "Guarigione e recupero";
+"Kindness-Long-Name" = "Gentilezza e generosità";
+"Faith-Long-Name" = "Fede e spiritualità";
+"Serenity-Long-Name" = "Serenità e tranquillità";
+"Fear-Long-Name" = "Superare la paura e l'ansia";
+"Patience-Long-Name" = "Pazienza e perseveranza";
+
+"Peace-Headline-1" = "Trova pace interiore e tranquillità oggi";
+"Peace-Headline-2" = "Rilassa la tua mente e trova la pace interiore";
+"Peace-Headline-3" = "Scopri la calma e la serenità nella tua vita";
+"Hope-Headline-1" = "Porta speranza e ottimismo nella tua vita";
+"Hope-Headline-2" = "Trova la speranza nei tempi più bui";
+"Hope-Headline-3" = "Credi in un futuro più luminoso con speranza";
+"Blessing-Headline-1" = "Attira benedizioni e abbondanza nella tua vita";
+"Blessing-Headline-2" = "Le benedizioni traboccano: apri il tuo cuore per riceverle";
+"Blessing-Headline-3" = "Conta le tue benedizioni e vivi una vita grata";
+"Forgiveness-Headline-1" = "Lascia andare il risentimento e abbraccia il perdono";
+"Forgiveness-Headline-2" = "Perdona te stesso e gli altri per trovare la pace interiore";
+"Forgiveness-Headline-3" = "Coltiva la compassione e il perdono nel tuo cuore";
+"Abundance-Headline-1" = "Svela i segreti della prosperità e dell'abbondanza";
+"Abundance-Headline-2" = "L'abbondanza è un tuo diritto di nascita: rivendicalo oggi";
+"Abundance-Headline-3" = "Attira ricchezza e abbondanza nella tua vita";
+"Courage-Headline-1" = "Abbraccia la tua forza interiore e il tuo coraggio";
+"Courage-Headline-2" = "Supera la paura e trova il coraggio di avere successo";
+"Courage-Headline-3" = "Intraprendi azioni coraggiose e vivi una vita coraggiosa";
+"Joy-Headline-1" = "Trova gioia nelle piccole cose della vita";
+"Joy-Headline-2" = "Riempi la tua vita di gioia e felicità";
+"Joy-Headline-3" = "Lascia che la gioia sia la tua guida per una vita appagante";
+"Protection-Headline-1" = "Proteggiti con una protezione potente";
+"Protection-Headline-2" = "Protezione da negatività e danni";
+"Protection-Headline-3" = "Sentiti sicuro e protetto ogni giorno";
+"Transformation-Headline-1" = "Trasforma la tua vita e abbraccia il cambiamento";
+"Transformation-Headline-2" = "Sblocca il tuo potenziale e realizza i tuoi sogni";
+"Transformation-Headline-3" = "Abbraccia il potere del cambiamento per una vita migliore";
+"Self-Care-Headline-1" = "Dai priorità alla cura di te per una persona più sana";
+"Self-Care-Headline-2" = "Nutri mente, corpo e anima con la cura di sé";
+"Self-Care-Headline-3" = "Ricarica le batterie con la cura di te stesso";
+"Relationships-Headline-1" = "Ama e sii amato: rafforza i tuoi rapporti";
+"Relationships-Headline-2" = "Coltiva le tue relazioni e guardale fiorire";
+"Relationships-Headline-3" = "Costruisci relazioni solide e sane ogni giorno";
+"Success-Headline-1" = "Sblocca tutto il tuo potenziale e raggiungi il successo";
+"Success-Headline-2" = "Alzati al di sopra delle sfide e raggiungi la grandezza";
+"Success-Headline-3" = "Agisci e crea la tua storia di successo";
+"Confidence-Headline-1" = "Aumenta la fiducia in te stesso e l'autostima oggi";
+"Confidence-Headline-2" = "Credi in te stesso e nelle tue capacità";
+"Confidence-Headline-3" = "Abbraccia la fiducia e vivi una vita audace";
+"Gratitude-Headline-1" = "Coltiva la gratitudine e trova gioia nella vita";
+"Gratitude-Headline-2" = "Ringrazia ogni giorno per le benedizioni della vita";
+"Gratitude-Headline-3" = "Un cuore grato conduce a una vita felice";
+"Healing-Headline-1" = "Guarisci corpo, mente e anima oggi";
+"Healing-Headline-2" = "Abbraccia la guarigione e trova la pace interiore";
+"Healing-Headline-3" = "Lascia andare il dolore e abbraccia una vita di guarigione";
+"Kindness-Headline-1" = "Diffondi gentilezza e rendi il mondo un posto migliore";
+"Kindness-Headline-2" = "La gentilezza è importante: praticala ogni giorno";
+"Kindness-Headline-3" = "Mostra compassione e gentilezza a tutti quelli che incontri";
+"Faith-Headline-1" = "Rafforza la tua fede e trova la pace interiore";
+"Faith-Headline-2" = "Confida in un potere superiore e credi nei miracoli";
+"Faith-Headline-3" = "Abbraccia la fede e vivi una vita con uno scopo";
+"Serenity-Headline-1" = "Trova serenità e tranquillità nella tua vita";
+"Serenity-Headline-2" = "Scopri la pace della mente con serenità";
+"Serenity-Headline-3" = "Coltiva la serenità e vivi una vita equilibrata";
+"Fear-Headline-1" = "Supera la paura e vivi una vita di libertà";
+"Fear-Headline-2" = "Abbi coraggio: affronta le tue paure oggi";
+"Fear-Headline-3" = "Non lasciare che la paura controlli la tua vita, superala ora";
+"Patience-Headline-1" = "Coltiva la pazienza e raggiungi i tuoi obiettivi";
+"Patience-Headline-2" = "La pazienza è una virtù: praticala ogni giorno";
+"Patience-Headline-3" = "Resistenza e resilienza: coltivare la pazienza e la perseveranza";
+
+"Peace-Headline-Short-1" = "trova la pace interiore";
+"Peace-Headline-Short-2" = "rilassa la mente";
+"Peace-Headline-Short-3" = "coltiva uno stato d'animo pacifico";
+"Hope-Headline-Short-1" = "scopri la speranza";
+"Hope-Headline-Short-2" = "rimani ottimista";
+"Hope-Headline-Short-3" = "credi in un domani più luminoso";
+"Blessing-Headline-Short-1" = "attira benedizioni nella tua vita";
+"Blessing-Headline-Short-2" = "conta le tue benedizioni";
+"Blessing-Headline-Short-3" = "sentiti benedetto";
+"Forgiveness-Headline-Short-1" = "lascia andare i rancori";
+"Forgiveness-Headline-Short-2" = "pratica la compassione";
+"Forgiveness-Headline-Short-3" = "liberati dal risentimento";
+"Abundance-Headline-Short-1" = "manifesta l'abbondanza";
+"Abundance-Headline-Short-2" = "crea ricchezza";
+"Abundance-Headline-Short-3" = "attira l'abbondanza nella tua vita";
+"Courage-Headline-Short-1" = "prendi coraggio";
+"Courage-Headline-Short-2" = "trova forza nei momenti difficili";
+"Courage-Headline-Short-3" = "sviluppa coraggio";
+"Joy-Headline-Short-1" = "prova gioia ogni giorno";
+"Joy-Headline-Short-2" = "trova la gioia nei momenti semplici";
+"Joy-Headline-Short-3" = "coltiva una mentalità gioiosa";
+"Protection-Headline-Short-1" = "sentiti sempre al sicuro";
+"Protection-Headline-Short-2" = "circondati di energia positiva";
+"Protection-Headline-Short-3" = "proteggi te stesso";
+"Transformation-Headline-Short-1" = "abbraccia il cambiamento";
+"Transformation-Headline-Short-2" = "sblocca tutto il tuo potenziale";
+"Transformation-Headline-Short-3" = "diventa la versione migliore di te stesso";
+"Self-Care-Headline-Short-1" = "prenditi cura di te";
+"Self-Care-Headline-Short-2" = "dai la priorità a te stesso";
+"Self-Care-Headline-Short-3" = "nutri la tua persona";
+"Relationships-Headline-Short-1" = "rafforza le tue relazioni";
+"Relationships-Headline-Short-2" = "costruisci connessioni significative";
+"Relationships-Headline-Short-3" = "connettiti profondamente";
+"Success-Headline-Short-1" = "raggiungi i tuoi obiettivi";
+"Success-Headline-Short-2" = "sblocca tutto il tuo potenziale";
+"Success-Headline-Short-3" = "crea la vita che desideri";
+"Confidence-Headline-Short-1" = "crea fiducia";
+"Confidence-Headline-Short-2" = "credi in te stesso";
+"Confidence-Headline-Short-3" = "supera i dubbi su te stesso";
+"Gratitude-Headline-Short-1" = "coltiva la gratitudine per una vita più felice";
+"Gratitude-Headline-Short-2" = "conta le tue benedizioni ogni giorno";
+"Gratitude-Headline-Short-3" = "lascia che la gratitudine ti cambi";
+"Healing-Headline-Short-1" = "guarisci te stesso con pensieri positivi";
+"Healing-Headline-Short-2" = "lascia andare il dolore";
+"Healing-Headline-Short-3" = "sentiti meglio con la giusta mentalità";
+"Kindness-Headline-Short-1" = "sii gentile con te stesso e con gli altri";
+"Kindness-Headline-Short-2" = "diffondi gentilezza ovunque tu vada";
+"Kindness-Headline-Short-3" = "sii contagioso con la gentilezza";
+"Faith-Headline-Short-1" = "credi nei miracoli";
+"Faith-Headline-Short-2" = "fidati del viaggio";
+"Faith-Headline-Short-3" = "lascia che la fede ti guidi in ogni cosa";
+"Serenity-Headline-Short-1" = "trova la serenità interiore";
+"Serenity-Headline-Short-2" = "abbraccia la serenità del momento presente";
+"Serenity-Headline-Short-3" = "lascia che la serenità fluisca in te";
+"Fear-Headline-Short-1" = "supera la paura";
+"Fear-Headline-Short-2" = "abbi meno paura, più vita";
+"Fear-Headline-Short-3" = "affronta le tue paure";
+"Patience-Headline-Short-1" = "coltiva la pazienza";
+"Patience-Headline-Short-2" = "aspetta le cose buone";
+"Patience-Headline-Short-3" = "pratica la pazienza per una vita più serena";
 
 "Same" = "Uguale";
 "Better" = "Meglio";
